--- a/app/src/main/res/menu/bottom_navigation_view_icons_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_view_icons_menu.xml
@@ -2,25 +2,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/movieIconBottomNavigation"
+        android:id="@+id/moviesHomeFragment"
         android:title="@string/lbl_movies_bottom_icon"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_baseline_smart_display_grey_25dp"/>
 
     <item
-        android:id="@+id/cinemaIconBottomNavigation"
+        android:id="@+id/cinemaHomeFragment"
         android:title="@string/lbl_cinema_bottom_icon"
         app:showAsAction="ifRoom"
         android:icon="@drawable/cinema"/>
 
     <item
-        android:id="@+id/ticketIconBottomNavigation"
+        android:id="@+id/ticketsHomeFragment"
         android:title="@string/lbl_ticket_bottom_icon"
         app:showAsAction="ifRoom"
         android:icon="@drawable/tickets"/>
 
     <item
-        android:id="@+id/profileIconBottomNavigation"
+        android:id="@+id/profileHomeFragment"
         android:title="@string/lbl_profile_bottom_icon"
         app:showAsAction="ifRoom"
         android:icon="@drawable/profile"/>
