--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -44,4 +44,6 @@
     <dimen name="height_navigation_icon">16dp</dimen>
     <dimen name="margin_medium_4_n">22dp</dimen>
     <dimen name="margin_card_medium_1_n">10dp</dimen>
+    <dimen name="width_detail_poster">140dp</dimen>
+    <dimen name="height_detail_poster">175dp</dimen>
 </resources>
