--- a/app/src/main/res/layout/layout_app_bar_home.xml
+++ b/app/src/main/res/layout/layout_app_bar_home.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary"
-    android:layout_height="wrap_content">
+    android:layout_height="?attr/actionBarSize">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
