--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,11 @@
         android:id="@+id/moviesHomeFragment"
         android:name="com.flexath.themoviebookingapp.ui.fragments.movies.MoviesHomeFragment"
         android:label="fragment_movies_home"
-        tools:layout="@layout/fragment_movies_home" />
+        tools:layout="@layout/fragment_movies_home" >
+        <action
+            android:id="@+id/action_moviesHome_to_moviesDetailsHome"
+            app:destination="@id/moviesDetailsHomeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/cinemaHomeFragment"
         android:name="com.flexath.themoviebookingapp.ui.fragments.cinema.CinemaHomeFragment"
@@ -25,4 +29,9 @@
         android:name="com.flexath.themoviebookingapp.ui.fragments.profile.ProfileHomeFragment"
         android:label="fragment_profile_home"
         tools:layout="@layout/fragment_profile_home" />
+    <fragment
+        android:id="@+id/moviesDetailsHomeFragment"
+        android:name="com.flexath.themoviebookingapp.ui.fragments.movies.MoviesDetailsHomeFragment"
+        android:label="fragment_movies_details_home"
+        tools:layout="@layout/fragment_movies_details_home" />
 </navigation>
