--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,4 +32,11 @@
         <item name="android:textSize">16sp</item>
         <item name="fontFamily">@font/dm_sans</item>
     </style>
+
+    <style name="CollapsingToolBarLayoutTitleText">
+        <item name="textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="fontFamily">@font/inter</item>
+    </style>
 </resources>
