--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -46,4 +46,6 @@
     <dimen name="margin_card_medium_1_n">10dp</dimen>
     <dimen name="width_detail_poster">140dp</dimen>
     <dimen name="height_detail_poster">175dp</dimen>
+    <dimen name="width_chat_svg">140dp</dimen>
+    <dimen name="height_chat_svg">140dp</dimen>
 </resources>
