--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,8 @@
         <item>@font/dm_sans</item>
         <item>@font/inter</item>
         <item>@font/inter_bold</item>
+        <item>@font/inter_medium</item>
+        <item>@font/inter_semibold</item>
         <item>@font/inter_thin</item>
     </array>
 </resources>
