--- a/app/src/main/res/layout/fragment_movies_details_home.xml
+++ b/app/src/main/res/layout/fragment_movies_details_home.xml
@@ -7,79 +7,6 @@
     android:background="@color/colorPrimary"
     tools:context=".ui.fragments.movies.MoviesDetailsHomeFragment">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarCollapseToolBarLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:collapsedTitleGravity="center"
-            app:collapsedTitleTextAppearance="@style/CollapsingToolBarLayoutTitleText"
-            app:collapsedTitleTextColor="@color/colorAccent"
-            app:contentScrim="@color/colorPrimary"
-            app:expandedTitleGravity="center"
-            app:expandedTitleTextAppearance="@style/CollapsingToolBarLayoutTitleText"
-            app:expandedTitleTextColor="@android:color/transparent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:title="Black Widow"
-            app:titleCollapseMode="fade"
-            app:titleEnabled="true">
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/btnBackMoviesDetails"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="12dp"
-                android:elevation="@dimen/margin_medium_3"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/back_arrow" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="end"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="24dp"
-                android:elevation="@dimen/margin_medium_3"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/ic_baseline_share_white_24dp" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/btnPlayMoviesDetails"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:contentDescription="@string/lbl_play_button_fab"
-                android:src="@drawable/ic_baseline_play_arrow_white_22dp"
-                app:backgroundTint="@color/colorPrimaryLight"
-                app:elevation="@dimen/margin_small" />
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <VideoView
-                    android:id="@+id/vvVideoMovieDetails"
-                    android:layout_width="match_parent"
-                    android:layout_height="210dp"
-                    android:saveEnabled="true"
-                    app:layout_collapseMode="parallax" />
-
-            </RelativeLayout>
-
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin" />
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-    </com.google.android.material.appbar.AppBarLayout>
-
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -89,39 +16,92 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <!--            <com.google.android.material.card.MaterialCardView-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_marginStart="17dp"-->
-            <!--                android:layout_marginTop="-26dp"-->
-            <!--                app:cardCornerRadius="4dp"-->
-            <!--                app:cardElevation="50dp"-->
-            <!--                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"-->
-            <!--                app:layout_collapseMode="parallax">-->
+            <FrameLayout
+                android:id="@+id/flVideoView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <!--                <androidx.appcompat.widget.AppCompatImageView-->
-            <!--                    android:id="@+id/ivPosterMoviesDetail"-->
-            <!--                    android:layout_width="@dimen/width_detail_poster"-->
-            <!--                    android:layout_height="@dimen/height_detail_poster"-->
-            <!--                    android:elevation="50dp"-->
-            <!--                    android:scaleType="centerCrop"-->
-            <!--                    app:srcCompat="@drawable/blackwidow_poster" />-->
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/btnBackMoviesDetails"
+                    android:layout_width="@dimen/width_btn_back_movies_details"
+                    android:layout_height="@dimen/height_btn_back_movies_details"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="@dimen/margin_large_n"
+                    android:layout_marginTop="@dimen/margin_card_medium_2"
+                    android:elevation="@dimen/margin_medium_3"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/back_arrow" />
 
-            <!--            </com.google.android.material.card.MaterialCardView>-->
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="@dimen/width_btn_share_movies_details"
+                    android:layout_height="@dimen/height_btn_share_movies_details"
+                    android:layout_gravity="end"
+                    android:layout_marginTop="@dimen/margin_card_medium_2"
+                    android:layout_marginEnd="24dp"
+                    android:elevation="@dimen/margin_medium_3"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/ic_baseline_share_white_24dp" />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/btnPlayMoviesDetails"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:contentDescription="@string/lbl_play_button_fab"
+                    android:src="@drawable/ic_baseline_play_arrow_white_22dp"
+                    app:backgroundTint="@color/colorPrimaryLight"
+                    app:elevation="@dimen/margin_small" />
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <VideoView
+                        android:id="@+id/vvVideoMovieDetails"
+                        android:layout_width="wrap_content"
+                        android:layout_height="189dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:saveEnabled="true" />
+
+                </RelativeLayout>
+
+            </FrameLayout>
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/flVideoView"
+                android:layout_marginStart="17dp"
+                android:layout_marginTop="-22dp"
+                android:elevation="@dimen/margin_medium"
+                app:cardCornerRadius="@dimen/margin_card_medium_1_n"
+                app:cardElevation="@dimen/margin_xlarge">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/ivPosterMoviesDetail"
+                    android:layout_width="@dimen/width_detail_poster"
+                    android:layout_height="@dimen/height_detail_poster"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/blackwidow_poster" />
+
+            </com.google.android.material.card.MaterialCardView>
 
             <RelativeLayout
                 android:id="@+id/rlInfoMovieDetails"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/flVideoView"
                 android:layout_marginStart="181dp"
-                android:layout_marginTop="16dp"
-                app:layout_collapseMode="parallax">
+                android:layout_marginTop="16dp">
 
                 <LinearLayout
                     android:id="@+id/llTitleMovieDetails"
-                    android:layout_width="257dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
@@ -168,14 +148,14 @@
                     android:textStyle="bold" />
 
                 <com.google.android.material.chip.ChipGroup
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvFilmTypeMovieDetails"
                     android:layout_marginTop="18dp">
 
                     <com.google.android.material.chip.Chip
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:backgroundTint="@color/colorAccent"
                         android:elevation="@dimen/margin_medium_2"
                         android:fontFamily="@font/inter"
@@ -185,7 +165,7 @@
 
                     <com.google.android.material.chip.Chip
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:backgroundTint="@color/colorAccent"
                         android:fontFamily="@font/inter"
                         android:text="Adventure"
@@ -194,7 +174,7 @@
 
                     <com.google.android.material.chip.Chip
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:backgroundTint="@color/colorAccent"
                         android:fontFamily="@font/inter"
                         android:text="Drama"
@@ -203,7 +183,7 @@
 
                     <com.google.android.material.chip.Chip
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:backgroundTint="@color/colorAccent"
                         android:fontFamily="@font/inter"
                         android:text="Animation"
@@ -379,7 +359,7 @@
                         app:iconGravity="start"
                         app:iconSize="18dp"
                         app:iconTint="@color/black"
-                        app:rippleColor="@color/white" />
+                        app:rippleColor="@color/colorPrimary" />
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="@dimen/width_chat_svg"
@@ -447,28 +427,12 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <RelativeLayout
-        android:layout_width="240dp"
-        android:layout_height="wrap_content"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/btnBookingButtonMoviesDetails"
+        android:layout_width="239dp"
+        android:layout_height="49dp"
         android:layout_gravity="bottom|center"
-        android:layout_marginBottom="66dp">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnBookingButtonMoviesDetails"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/inter_bold"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:text="@string/lbl_btn_booking"
-            android:textAllCaps="false"
-            android:textColor="#09060C"
-            android:textSize="16sp"
-            app:backgroundTint="@color/colorAccent"
-            app:cornerRadius="@dimen/margin_medium"
-            app:rippleColor="@color/white" />
-
-    </RelativeLayout>
-
+        android:layout_marginBottom="66dp"
+        app:srcCompat="@drawable/booking_button" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
